--- a/pmux.conf
+++ b/pmux.conf
@@ -1,4 +1,11 @@
 sessionname="jot"
-numsessions=2
-session[0]="xs jot0"
-session[1]="xs jot2"
+
+numwindows=3
+window_name[0]="jot0"
+window_command[0]="xs jot0"
+
+window_name[1]="jot2"
+window_command[1]="xs jot2"
+
+window_name[2]="htop"
+window_command[2]="top"
